testsuite/poke.pkl/cast-array-diag-7.pk
/* { dg-do compile } */

defvar a = [1,2] as int[2 + 1]; /* { dg-error "" } */
